Fixed overflow issue

--- a/src/styles/doc_brython.css
+++ b/src/styles/doc_brython.css
@@ -49,13 +49,12 @@ a.banner:hover,a.banner:active {
 }
 
 #console {
-  background-color:#f3f3f3;
   color:#3e3434;
   font-size:12px;
   font-weight:700;
-  border-color: #dfd8d8;
-  resize: vertical;
-  padding: 15px;
+  border-color: transparent;
+  resize: none;
+  padding: 0;
 }
 
 #content {
